# internal/handlers/router.go
@@ -8,6 +8,7 @@ func NewRouter(recipeHandler *RecipeHandler) http.Handler {
 	mux := http.NewServeMux()
 	mux.HandleFunc("/recipe/", recipeHandler.GetRecipe)
 	mux.HandleFunc("/recipes", recipeHandler.ListRecipes)
+	mux.HandleFunc("/ingredients", recipeHandler.ListIngredients)
 
 	return mux
 }
